--- a/src/views/profile-view/profileview.css
+++ b/src/views/profile-view/profileview.css
@@ -11,7 +11,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    flex-grow: 1; /* take up remaining vertical space */
+    flex-grow: 1;
 }
 
 .greeting {
